fix footer links readability

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,7 +17,7 @@ ul, ol {
 .btn a {
     color: #fff;
 }
-p a {
+p a, .footer-nav a {
     color: #0051A8;
     font-weight: bold;
 }
